--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js"
+      "start": "node index.js",
+      "seed": "node scripts/seed.js"
     },
     "dependencies": {
       "cors": "^2.8.5",
       "express": "^4.19.2",
-      "joi": "^17.13.3"
+      "joi": "^17.13.3",
+      "mongoose": "^8.0.0"
     },
     "engines": { "node": ">=18" }
   }
